[package]
name = "transactions-engine"
version = "0.1.0"
edition = "2021"
author = "Kent Utterback"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive", "regex"] }
csv = "*"
serde = { version = "*", features = ["derive"]}
